--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -292,26 +292,13 @@ main {
   position: relative;
   width: calc(min(90rem, 90%));
   margin: 0 auto;
-  /* min-height: 100vh; */
+  min-height: 100vh;
   column-gap: 3rem;
   padding-block: min(20vh, 3rem);
 }
 
-.bg {
-  position: fixed;
-  top: -4rem;
-  left: -12rem;
-  z-index: -1;
-  opacity: 0;
-}
-
-.bg2 {
-  position: fixed;
-  bottom: -2rem;
-  right: -3rem;
-  z-index: -1;
-  width: 9.375rem;
-  opacity: 0;
+.box {
+  width: 50%;
 }
 
 main > div span {
@@ -357,19 +344,36 @@ main a {
   color: #717171;
   font-weight: 500;
   background: #fff;
-  border-radius: 3.125rem;
+  border-radius: 50px;
   transition: 0.3s ease-in-out;
 }
 
-main > div > a {
+.link {
   border: 2px solid #c2c2c2;
-  margin-top: 2.188rem;
+  margin-top: 40px;
   padding: 0.625rem 1.875rem;
 }
 
-main > div > a:hover {
+.link:hover {
+  border: 2px solid #005baa;
+  color: #005baa;
+}
+
+/* main > div > a {
+  border: 2px solid #c2c2c2;
+  margin-top: 2.188rem;
+  padding: 0.625rem 1.875rem;
+} */
+
+/* main > div > a:hover {
   border: 0.125rem solid #005baa;
   color: #005baa;
+} */
+
+.social {
+  display: flex;
+  gap: 30px;
+  margin-top: 30px;
 }
 
 .swiper {
@@ -377,23 +381,41 @@ main > div > a:hover {
   padding-top: 3.125rem;
 }
 
-.swiper-pagination-bullet,
-.swiper-pagination-bullet-active {
-  background: #fff;
+:global(.swiper-pagination-bullet) {
+  background: #005baa;
+  width: 1.05rem;
+  height: 1.05rem;
+  border-radius: 0.5rem;
+  opacity: 1;
 }
 
-.swiper-pagination .swiper-pagination-bullet {
+/* :global(.swiper-pagination-bullet-active) {
   bottom: 1.25rem !important;
+  width: 1.05rem;
+  height: 1.05rem;
+  border-radius: 0.5rem;
+  background-color: blue;
+} */
+
+:global(.swiper-pagination) {
+  bottom: 1.25rem !important;
+  /* position: absolute;
+  /* text-align: center;
+  transition: 300ms opacity;
+  transform: translate3d(0, 0, 0);
+  z-index: 10;
+  top: 4rem !important; */
 }
 
 .swiperSlide {
   width: 300px;
-  height: 600px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  padding: 10px;
   align-items: self-start;
-  border: 2px solid #d1ceff;
+  border: 2px solid #c2c2c2;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(25px);
@@ -405,17 +427,34 @@ main > div > a:hover {
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0 auto;
+  border-radius: 10px;
 }
 
-.swiper-slide h2 {
-  color: #fff;
+.swiperSlide h2 {
+  text-transform: capitalize;
+  text-align: center;
+  margin-bottom: 40px;
+  letter-spacing: 0.8px;
   font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 1.4rem;
+  font-weight: 600;
+  font-size: clamp(30px, 30px + 0.5vw, 40px);
+  background-color: #005baa;
+  background-image: linear-gradient(45deg, #005baa, #000000);
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  /* color: #020202;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  text-align: center;
+  font-size: 24px;
   line-height: 1.4;
-  margin-bottom: 0.625rem;
-  padding: 0 0 0 1.563rem;
-  text-transform: uppercase;
+  margin-bottom: 40px; */
+
+  /* text-transform: uppercase; */
 }
 
 .swiper-slide p {
@@ -437,23 +476,23 @@ main > div > a:hover {
   font-size: 0.9rem;
 }
 
-.swiper-slide a:hover {
+.swiperSlide a:hover {
   color: #005baa;
 }
 
-.swiper-slide div {
+/* .swiperSlide div {
   display: none;
   opacity: 0;
   padding-bottom: 0.625rem;
-}
+} */
 
 .swiper-slide-active div {
   display: block;
   opacity: 1;
 }
 
-.swiperOne {
-  /* background-image: url('../../images/SlimMom.jpg'); */
+/* .swiperOne {
+ 
   top: 50%;
   left: 50%;
   background-repeat: no-repeat;
@@ -476,7 +515,7 @@ main > div > a:hover {
   background-image: url('../../images/Film.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-}
+} */
 
 .swiper-3d .swiper-slide-shadow-left,
 .swiper-3d .swiper-slide-shadow-right {
