--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,5 +1,5 @@
 * {
-  margin: 0;
+  /* margin: 0; */
   padding: 0;
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
@@ -12,14 +12,17 @@ body {
 main {
   position: relative;
   width: calc(min(90rem, 90%));
+  width: 90%;
   margin: 0 auto;
-  min-height: 100vh;
-  column-gap: 3rem;
+  height: 100vh;
+  /* column-gap: 3rem; */
   padding-block: min(20vh, 3rem);
 }
 
 .box {
-  width: 50%;
+  /* width: 50%; */
+  width: 90%;
+  margin: 0 auto;
 }
 
 main > div span {
@@ -34,7 +37,8 @@ main > div h1 {
   letter-spacing: 0.8px;
   font-family: 'Roboto', sans-serif;
   font-weight: 900;
-  font-size: clamp(3.4375rem, 3.25rem + 0.75vw, 4rem);
+  /* font-size: clamp(3.4375rem, 3.25rem + 0.75vw, 4rem); */
+  font-size: 40px;
   background-color: #005baa;
   background-image: linear-gradient(45deg, #005baa, #000000);
   background-size: 100%;
@@ -43,6 +47,7 @@ main > div h1 {
   -webkit-text-fill-color: transparent;
   -moz-background-clip: text;
   -moz-text-fill-color: transparent;
+  margin: 40px 0 0;
 }
 
 main > div hr {
@@ -56,6 +61,7 @@ main > div hr {
 
 main > div p {
   line-height: 1.6;
+  font-size: 18px;
 }
 
 main a {
@@ -64,7 +70,6 @@ main a {
   text-transform: uppercase;
   color: #717171;
   font-weight: 500;
-  /* background: #fff; */
   border-radius: 50px;
   transition: 0.3s ease-in-out;
   transform: scale(1);
@@ -84,6 +89,12 @@ main a:hover {
   padding: 0.625rem 1.875rem;
 }
 
+.linkSee {
+  border: 2px solid #c2c2c2;
+  margin-top: 20px;
+  padding: 0.625rem 1.875rem;
+}
+
 .link:hover {
   border: 2px solid #005baa;
   color: #005baa;
@@ -91,12 +102,15 @@ main a:hover {
 
 .social {
   display: flex;
-  gap: 30px;
+  gap: 10px;
+  /* gap: 30px; */
   margin-top: 30px;
+  align-items: center;
 }
 
 .swiper {
-  width: 50%;
+  /* width: 50%; */
+  width: 90%;
   padding-top: 3.125rem;
 }
 
@@ -118,12 +132,6 @@ main a:hover {
 
 :global(.swiper-pagination) {
   bottom: 1.25rem !important;
-  /* position: absolute;
-    /* text-align: center;
-    transition: 300ms opacity;
-    transform: translate3d(0, 0, 0);
-    z-index: 10;
-    top: 4rem !important; */
 }
 
 .swiperSlide {
@@ -164,15 +172,6 @@ main a:hover {
   -webkit-text-fill-color: transparent;
   -moz-background-clip: text;
   -moz-text-fill-color: transparent;
-  /* color: #020202;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    text-align: center;
-    font-size: 24px;
-    line-height: 1.4;
-    margin-bottom: 40px; */
-
-  /* text-transform: uppercase; */
 }
 
 .swiper-slide p {
@@ -208,10 +207,59 @@ main a:hover {
   background-image: none;
 }
 
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 480px) {
+  main > div h1 {
+    font-size: 50px;
+  }
+
+  main > div span {
+    font-size: 18px;
+  }
+
+  .social {
+    gap: 30px;
+  }
+
+  .swiper {
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 640px) {
+  .box {
+    width: 100%;
+  }
+
+  .social {
+    gap: 30px;
+  }
+
+  .swiper {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) {
   main {
     display: flex;
-    align-items: center;
+    align-items: start;
+    gap: 30px;
+  }
+
+  .swiper {
+    padding-top: 100px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .box {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  main > div h1 {
+    font-size: 60px;
   }
 }
 
