--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -242,7 +242,7 @@ main a:hover {
 @media screen and (min-width: 768px) {
   main {
     display: flex;
-    align-items: start;
+    align-items: center;
     gap: 30px;
   }
 
